Continued 21 migration