@@ -49,8 +49,8 @@ public class ExtractExtensions extends GenerateCommon {
 		
 		JSONObject extensions = new JSONObject();
 		
-		List<String> allNodes = actualAPI.getNodes().stream().map(APIModel::getMappedResource).collect(toList());
-		List<String> baseAPINodes = baseAPI.getNodes().stream().map(APIModel::getMappedResource).collect(toList());
+		List<String> allNodes = actualAPI.getNodes().stream().map(APIModel::getMappedResource).toList();
+		List<String> baseAPINodes = baseAPI.getNodes().stream().map(APIModel::getMappedResource).toList();
 	
 		allNodes.removeAll(baseAPINodes);
 		
@@ -71,16 +71,16 @@ public class ExtractExtensions extends GenerateCommon {
 
 		actualAPI.getNodesByNames(allNodes).forEach(node -> {
 			
-			List<String> inherited = node.getInheritedProperties(actualAPI.getCompleteGraph()).stream().map(Property::getName).collect(toList());			
+			List<String> inherited = node.getInheritedProperties(actualAPI.getCompleteGraph()).stream().map(Property::getName).toList();			
 			List<Property> actualProperties = node.getProperties();
 			
 			Node baseNode = baseAPI.getNode(APIModel.getReverseResourceMapping(node.getName()));
-			List<String> baseInherited = baseNode.getInheritedProperties(baseAPI.getCompleteGraph()).stream().map(Property::getName).collect(toList());
+			List<String> baseInherited = baseNode.getInheritedProperties(baseAPI.getCompleteGraph()).stream().map(Property::getName).toList();
 			
 			List<Property> baseInheritedProperties = baseNode.getInheritedProperties(baseAPI.getCompleteGraph());
 
-			List<Property> baseProperties = baseNode.getProperties().stream().filter(p->!baseInherited.contains(p.getName())).collect(toList());
-			List<String>   basePropertiesName = baseProperties.stream().map(Property::getName).collect(toList());
+			List<Property> baseProperties = baseNode.getProperties().stream().filter(p->!baseInherited.contains(p.getName())).toList();
+			List<String>   basePropertiesName = baseProperties.stream().map(Property::getName).toList();
 
 			LOG.debug("ExtractExtension:: node={} actual properties={}", node.getName(), actualProperties);
 			LOG.debug("ExtractExtension:: node={} actual inherited: {}", node.getName(), inherited);
@@ -116,7 +116,7 @@ public class ExtractExtensions extends GenerateCommon {
 
 					return diff;
 				})
-				.collect(toList());
+				.toList();
 			
 			LOG.debug("node: {} extension properties: {}", node.getName(), actualProperties);
 
